<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_padding">

    <com.dlsu.unisync.views.ScreenHeaderView
        android:id="@+id/qrTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:headerTitle="@string/title_qr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/qrFrame"
        android:layout_width="@dimen/qr_frame_size"
        android:layout_height="@dimen/qr_frame_size"
        android:layout_marginTop="@dimen/space_xxl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/qrTitle">

        <TextView
            android:id="@+id/qrBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_card"
            android:elevation="@dimen/card_elevation"
            android:gravity="center"
            android:importantForAccessibility="no"
            android:lineSpacingMultiplier="1.15"
            android:text="@string/qr_placeholder"
            android:textAppearance="@style/TextAppearance.UniSync.QrPlaceholder" />

        <androidx.camera.view.PreviewView
            android:id="@+id/cameraPreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <!-- Corner brackets shown over the live preview while scanning. -->
        <ImageView
            android:id="@+id/scanReticle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_scan_reticle"
            android:visibility="gone" />
    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scanButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/space_xl"
        android:text="@string/qr_scan"
        app:icon="@drawable/ic_qr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/qrFrame" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/checkInButton"
        style="@style/Widget.UniSync.Button.Outlined"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/space_md"
        android:text="@string/qr_simulate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scanButton" />

    <TextView
        android:id="@+id/checkInStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_md"
        android:gravity="center"
        android:text="@string/qr_status_ready"
        android:textAppearance="@style/TextAppearance.UniSync.Subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkInButton" />

    <TextView
        android:id="@+id/recentHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xl"
        android:text="@string/qr_recent_header"
        android:textAppearance="@style/TextAppearance.UniSync.SectionTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkInStatus" />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:animateLayoutChanges="true"
        android:layout_marginTop="@dimen/space_md"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recentHeader">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recentRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/recentEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/empty_icon_size"
                android:layout_height="@dimen/empty_icon_size"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_qr"
                app:tint="@color/empty_icon_tint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_md"
                android:text="@string/qr_no_checkins"
                android:textAppearance="@style/TextAppearance.UniSync.Subtitle" />
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
