<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/screen_padding">

        <com.dlsu.unisync.views.ScreenHeaderView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headerSubtitle="@string/schedule_subtitle"
            app:headerTitle="@string/title_schedule" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/space_lg"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/scheduleRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/fab_clearance" />

            <LinearLayout
                android:id="@+id/emptyState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="@dimen/empty_icon_size"
                    android:layout_height="@dimen/empty_icon_size"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_nav_schedule"
                    app:tint="@color/soft_line" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_md"
                    android:text="@string/schedule_empty"
                    android:textAppearance="@style/TextAppearance.UniSync.Subtitle" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addClassFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/space_lg"
        android:text="@string/schedule_add"
        android:textColor="@color/white"
        app:backgroundTint="@color/dark_green"
        app:icon="@drawable/ic_add"
        app:iconTint="@color/white" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
